tests/specs/ecosystem/std/archive/0_197_0.test
std/archive/0.197.0
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@std/internal@^0.197.0": "jsr:@std/internal@0.197.0"
    },
    "jsr": {
      "@std/internal@0.197.0": {
        "integrity": "1745fb4e26a7ef5088c23814c12629a45152f45615215507cbb1293818eafd6c"
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2694 [ERROR]: Namespace 'Deno' has no exported member 'Seeker'.
  constructor(meta: TarMeta, header: TarHeader, reader: Reader | (Reader & Deno.Seeker)){}
                                                                                ~~~~~~
    at file://<tmpdir>/untar.ts:10:81

